--- a/gqlgen.yml
+++ b/gqlgen.yml
@@ -5,15 +5,34 @@ schema:
   - "schema/**/*.graphql"
 
 exec:
-  filename: graph/generated/generated.go
-  package: generated
+  filename: app/gateway/gateway.go
+  package: gateway
+
+model:
+  filename: app/models/models.go
+  package: models
 
 resolver:
-  filename: resolvers/resolver.go
+  layout: follow-schema
+  dir: app/resolvers
   package: resolvers
-  type: Resolver
 
 # Optional, set to true if you prefer []Thing over []*Thing
-omit_slice_element_pointers: true
+# omit_slice_element_pointers: true
 
-autobind: []
+autobind:
+  - "ecommerce/app/models"
+
+models:
+  ID:
+    model:
+      - github.com/99designs/gqlgen/graphql.ID
+      - github.com/99designs/gqlgen/graphql.Int
+      - github.com/99designs/gqlgen/graphql.Int64
+      - github.com/99designs/gqlgen/graphql.Int32
+  Int:
+    model:
+      - github.com/99designs/gqlgen/graphql.Int
+      - github.com/99designs/gqlgen/graphql.Int64
+      - github.com/99designs/gqlgen/graphql.Int32
+
